--- a/index.html
+++ b/index.html
@@ -1,26 +1,4 @@
-
-    .btn-whatsapp:hover {
-      background-color: #128C7E;
-    }
-    @media (max-width: 480px) {
-      .profile img {
-        width: 100px;
-        height: 100px;
-      }
-      .online-indicator {
-        width: 16px;
-        height: 16px;
-        bottom: 3px;
-        right: 3px;
-      }
-    }
-  </style>
-</head>
-<body>
-
-  <div class="container">
-    <div class="profile">
-      <img src="https://i.postimg.cc/zDKV8sP5/Imagem-do-Whats-App-de-2025-07-16-s-11-08-57-0cb04b60.jpg" alt="Lais Borges">
+.postimg.cc/zDKV8sP5/Imagem-do-Whats-App-de-2025-07-16-s-11-08-57-0cb04b60.jpg" alt="Lais Borges">
       <div class="online-indicator"></div>
     </div>
 
