--- a/index.html
+++ b/index.html
@@ -1,17 +1,1 @@
-
-
-      '557391312463',  // Número secundário
-      '557391352960', //  Número primeiro 
-    ];
-
-    function redirecionarWhatsApp() {
-      const index = Math.floor(Math.random() * numerosWhatsApp.length);
-      const numero = numerosWhatsApp[index];
-      const mensagem = encodeURIComponent("Oi Lais, tenho interesse!");
-      const link = https://wa.me/${numero}?text=${mensagem};
-      window.location.href = link;
-    }
-  </script>
-
-</body>
-</html>
+ugyfk
