--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>LALA - WhatsApp</title>
+  <title>acesso - WhatsApp</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -94,9 +94,9 @@
       <div class="online-indicator"></div>
     </div>
 
-    <h2>SANTOS </h2>
+    <h2>LALA </h2>
     <p>21 anos</p>
-    <p>Bahia / SP</p>
+    <p>BAHIA
 
     <button class="btn-whatsapp" onclick="redirecionarWhatsApp()">Falar no WhatsApp</button>
   </div>
